--- a/roles/agent/ops/channelquery/apply.yml
+++ b/roles/agent/ops/channelquery/apply.yml
@@ -3,7 +3,6 @@
 # spec:
 #   description: query channel configuration
 #   organization: example.com
-#   nodeCert: admin01-sample
 #   actions:
 #   - name: channelquery
 #     description: query channel configuration
@@ -25,21 +24,26 @@
     channelName: "{{ action.parameters.channel_name }}"
     ordererNode: "{{ action.parameters.orderer_node }}"
 
+- name: Fixup the orderer name in case only the short name used
+  when: not (orgid in (ordererNode))
+  set_fact:
+    ordererNode: "{{ ordererNode }}-{{ orgid }}"
+
 - name: End the process if either variable is empty
   when: channelName == '' or ordererNode == ''
   include_tasks: '{{ role_path }}/common/endplay.yml'
   vars:
     RESULT_MSG: 'Failed - Both channel name and orderer node must be provided'
 
-# Now we get the nodecert under which the operation is performed
-- name: Get user info
-  include_tasks: '{{ role_path }}/common/getuserinfo.yml'
-
 # Now we get the orderer node info from either nodecert or node asset
 - name: Get node info
   include_tasks: '{{ role_path }}/common/getnodeinfo.yml'
   vars:
     thesecretname: "{{ ordererNode }}"
+
+- name: Get orderer node admin endpoint
+  set_fact:
+    ordererid: "{{ lookup('file', agentworkdir+'/'+ordererNode+'/msp/id.json') | from_json }}"
 
 - name: Get core yaml files
   copy:
@@ -54,14 +58,13 @@
   ansible.builtin.shell: |
     export FABRIC_CFG_PATH={{ agentworkdir }}/config
     export CORE_PEER_TLS_ENABLED=true
-    export CORE_PEER_LOCALMSPID={{ orgid }}
-    export CORE_PEER_TLS_ROOTCERT_FILE={{ agentworkdir }}/tls/tlsca.crt
-    export CORE_PEER_MSPCONFIGPATH={{ agentworkdir }}/user/msp
-    export CORE_PEER_ADDRESS={{ endpoint|replace('grpcs://', '') }}
+    export CORE_PEER_LOCALMSPID={{ ordererid.mspid }}
+    export CORE_PEER_TLS_ROOTCERT_FILE={{ agentworkdir }}/{{ ordererNode }}/tls/ca.crt
+    export CORE_PEER_MSPCONFIGPATH={{ agentworkdir }}/{{ ordererNode }}/msp
+    export CORE_PEER_ADDRESS={{ ordererid.endpoint }}
     {{ bindir }}/bin/peer channel fetch config config_block.bk \
-    --tls -c {{ channelName }} \
-    -o {{ endpoint|replace('grpcs://', '') }} \
-    --cafile {{ agentworkdir }}/tls/tlsca.crt
+    --tls -c {{ channelName }} -o {{ ordererid.endpoint }} \
+    --cafile {{ agentworkdir }}/{{ ordererNode }}/tls/ca.crt
   args:
     chdir: '{{ agentworkdir }}'
     executable: /bin/bash
@@ -81,4 +84,3 @@
     DOWNLOAD_MSG: >-
       kubectl cp -n {{ controllerns }} -c manager
       {{ podname }}:{{ agentworkdir }}/config_block.bk
-      
