--- a/config/integration/peers.yaml
+++ b/config/integration/peers.yaml
@@ -2,7 +2,7 @@
 apiVersion: operator.fabric.hyperledger.org/v1alpha1
 kind: Peer
 metadata:
-  name: peer1
+  name: peer1org0
 spec:
   # Add fields here
   organization: org0.example.com
@@ -14,7 +14,7 @@ spec:
 apiVersion: operator.fabric.hyperledger.org/v1alpha1
 kind: Peer
 metadata:
-  name: peer1
+  name: peer1org1
 spec:
   organization: org1.example.com
   nodeCert:
