--- a/config/samples/operator_v1alpha1_agent_channelquery.yaml
+++ b/config/samples/operator_v1alpha1_agent_channelquery.yaml
@@ -10,4 +10,4 @@ spec:
     description: query channel configuration
     parameters:
       channelName: mychannel
-      ordererNode: orderer-sample
+      ordererNode: orderer-sample-example-com
