--- a/config/integration/agent_channelquery.yaml
+++ b/config/integration/agent_channelquery.yaml
@@ -10,4 +10,4 @@ spec:
     description: query channel configuration
     parameters:
       channelName: mychannel
-      ordererNode: orderer1
+      ordererNode: orderer1-example-com
