--- a/config/samples/operator_v1alpha1_agent_channelcreate.yaml
+++ b/config/samples/operator_v1alpha1_agent_channelcreate.yaml
@@ -4,13 +4,10 @@ metadata:
   name: agent-sample
 spec:
   organization: example.com
-  nodeCert: admin01-sample
   actions:
   - name: channelcreate
     description: Create new channel
     parameters:
       channelName: mychannel
-      ordererNode: orderer-sample
-      additionalOrgs:
-#       - org0-example-com-msp-asset
-#       - org1-example-com-msp-asset
+      ordererNode: orderer-sample-example-com
+      additionalOrgs: []
