ca and msp assets are controlled by ca
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/samples/operator_v1alpha1_agent_assetgen.yaml
+++ b/config/samples/operator_v1alpha1_agent_assetgen.yaml
@@ -9,5 +9,5 @@ spec:
   - name: assetgen
     description: Generate asset file
     parameters:
-      assettypes: ['ca', 'orderer', 'peer', 'msp']
+      assettypes: ['ca', 'orderer', 'peer']
       includewallets: no
