Fixed the channel signoff default config name
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/samples/operator_v1alpha1_agent_channelsignoff.yaml
+++ b/config/samples/operator_v1alpha1_agent_channelsignoff.yaml
@@ -8,7 +8,7 @@ spec:
   - name: channelsignoff
     description: sign off channel configuration changes
     parameters:
-      newconfig: config_block.json
+      newconfig: mychannel_config.json
       channelName: mychannel
       ordererNode: orderer-sample-example-com
       peerNode: peer-sample-example-com
