--- a/roles/agent/ops/assetgen/apply.yml
+++ b/roles/agent/ops/assetgen/apply.yml
@@ -35,29 +35,11 @@
   loop_control:
     loop_var: restype
 
-- name: Setup destination dir
-  set_fact:
-    targetdir: "{{ lookup('env','HOME') }}/agent/download"
-
-- name: Make sure that asset target directory exists
-  file:
-    path: '{{ targetdir }}'
-    state: '{{ item }}'
-    mode: 0775
-  with_items:
-  - 'absent'
-  - 'directory'
-
 - name: Package all the assets to one file
   archive:
     path: "{{ agentworkdir }}/assets"
-    dest: "{{ targetdir }}/{{ orgid }}-assets.zip"
+    dest: "{{ downloaddir }}/{{ orgid }}-assets.zip"
     format: zip
-
-- name: Get the pod name
-  set_fact:
-    podname: "{{ lookup('env', 'HOSTNAME') }}"
-    controllerns: "{{ lookup('file', '/var/run/secrets/kubernetes.io/serviceaccount/namespace') }}"
 
 - name: Update the crd status
   include_tasks: '{{ role_path }}/common/endplay.yml'
@@ -65,4 +47,4 @@
     RESULT_MSG: 'Succeeded'
     DOWNLOAD_MSG: >-
       kubectl cp -n {{ controllerns }} -c manager
-      {{ podname }}:{{ targetdir }}/{{ orgid }}-assets.zip
+      {{ podname }}:{{ downloaddir }}/{{ orgid }}-assets.zip
