--- a/roles/agent/ops/channelsignoff/apply.yml
+++ b/roles/agent/ops/channelsignoff/apply.yml
@@ -6,12 +6,12 @@
 #   - name: channelsignoff
 #     description: sign off channel configuration changes
 #     parameters:
-#       newconfig: config_block.json
+#       envelopeFile: mychannel_update_envelope.pb
 #       channelName: mychannel
 #       ordererNode: orderer-sample-example-com
 #       peerNode: peer-sample-example-com
 #
-# newconfig indicate the desired channel configuration which must be
+# envelopeFile indicate the desired channel configuration which must be
 # a full channel configuration json file. This file has to be uploaded
 # to the agent first
 #
@@ -31,42 +31,32 @@
 
 - name: Get variable with their names
   set_fact:
-    newconfig: "{{ action.parameters.newconfig }}"
+    envelopeFile: "{{ action.parameters.envelope_file }}"
     channelName: "{{ action.parameters.channel_name }}"
     ordererNode: "{{ action.parameters.orderer_node }}"
     peerNode: "{{ action.parameters.peer_node }}"
 
 - name: End the process if asset name was not provided
-  when: newconfig == ''
+  when: envelopeFile == ''
   include_tasks: '{{ role_path }}/common/endplay.yml'
   vars:
-    RESULT_MSG: 'Failed - new channel configuration json file {{ newconfig }} must be provided for channel changes'
+    RESULT_MSG: 'Failed - the envelope file {{ envelopeFile }} must be provided for signing off'
 
-- name: Setup upload dir
-  set_fact:
-    targetdir: "{{ lookup('env','HOME') }}/agent/upload"
-
-- name: Make sure that target directory exists
-  file:
-    path: '{{ targetdir }}'
-    state: 'directory'
-    mode: 0775
-
-- name: Check if the new configuration file exists
+- name: Check if the envelope file exists
   stat:
-    path: '{{ targetdir }}/{{ newconfig }}'
+    path: '{{ uploaddir }}/{{ envelopeFile }}'
   register: configfile
 
-- name: End the process when new configuration file does not exist
+- name: End the process when envelope file does not exist
   when: not configfile.stat.exists
   include_tasks: '{{ role_path }}/common/endplay.yml'
   vars:
-    RESULT_MSG: 'Failed - new channel configuration json file {{ newconfig }} must be uploaded for channel changes'
+    RESULT_MSG: 'Failed - envelope file {{ envelopeFile }} must be uploaded for signing'
 
-- name: Get new configuration json file
+- name: Get envelope file
   copy:
-    src: '{{ targetdir }}/{{ newconfig }}'
-    dest: '{{ agentworkdir }}/{{ channelName }}_config.json' 
+    src: '{{ uploaddir }}/{{ envelopeFile }}'
+    dest: '{{ agentworkdir }}/{{ channelName }}_update_envelope.pb' 
 
 # Now we get the orderer node info from either nodecert or node asset
 - name: Get orderer node info
@@ -94,12 +84,12 @@
 
 - name: Generate the signoff script
   template:
-    src: "{{ role_path }}/ops/channelsignoff/templates/signoff.j2"
-    dest: "{{ agentworkdir }}/signoff.sh"
+    src: "{{ role_path }}/ops/channelsignoff/templates/process.j2"
+    dest: "{{ agentworkdir }}/process.sh"
     mode: +x
 
 - name: Sign off the changes
-  ansible.builtin.command: "{{ agentworkdir }}/signoff.sh"
+  ansible.builtin.command: "{{ agentworkdir }}/process.sh"
   args:
     chdir: '{{ agentworkdir }}'
   register: cmdresult
@@ -109,20 +99,11 @@
   when: cmdresult.rc != 0
   include_tasks: '{{ role_path }}/common/endplay.yml'
   vars:
-    RESULT_MSG: "Failed - Channel Signoff. {{ cmdresult.stderr }}"
+    RESULT_MSG: 'Failed - Channel Signoff. {{ cmdresult.stderr}}'
 
-- name: Get the pod name
-  set_fact:
-    podname: "{{ lookup('env', 'HOSTNAME') }}"
-    controllerns: "{{ lookup('file', '/var/run/secrets/kubernetes.io/serviceaccount/namespace') }}"
-
-- name: Setup destination dir
-  set_fact:
-    agentrootdir: "{{ lookup('env','HOME') }}/agent"
-
-- name: Update the crd status
+- name: Update the resource status
   include_tasks: '{{ role_path }}/common/endplay.yml'
   vars:
     RESULT_MSG: 'Succeeded - Channel Signoff'
     DOWNLOAD_MSG: >-
-      kubectl cp -n {{ controllerns }} -c manager {{ podname }}:{{ agentrootdir }}/download/{{ channelName }}_update_envelope.pb
+      kubectl cp -n {{ controllerns }} -c manager {{ podname }}:{{ downloaddir }}/{{ channelName }}_update_envelope.pb
